# indoorloc

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml
assets/: CSI_position_datasets.docx  室内定位数据集_美化版.docx
docs/: algorithms.html  datasets.html  datasets_zh.html
examples/: quickstart.py
indoorloc/: __init__.py  registry.py  version.py
indoorloc/configs/: README.md  __init__.py
indoorloc/configs/_base_/: default.yaml
indoorloc/configs/_base_/datasets/: sodindoorloc.yaml  tampere.yaml  ujindoorloc.yaml
indoorloc/configs/_base_/models/: cnn1d.yaml  knn.yaml  mlp.yaml  resnet.yaml  wknn.yaml
indoorloc/configs/_base_/schedules/: schedule_1x.yaml  schedule_2x.yaml
indoorloc/configs/wifi/: efficientnet_ujindoorloc.yaml  knn_ujindoorloc.yaml  mlp_ujindoorloc.yaml  resnet18_ujindoorloc.yaml  resnet18_ujindoorloc_annotated.yaml  resnet18_ujindoorloc_minimal.yaml  wknn_ujindoorloc.yaml
indoorloc/datasets/: __init__.py  base.py  ble_indoor.py  ble_rssi_uci.py  catalog.py  csi2pos.py  csi2taoa.py  csi_bench.py  csi_fingerprint.py  csi_indoor.py  csu_csi_rssi.py  deepmimo.py  dichasus.py  espargos.py  haloc.py  hwild.py  ibeacon_rssi.py  loading.py  longtermwifi.py  magnetic_indoor.py  mamimo_csi.py  mamimo_uav.py  multimodal_indoor.py  opencsi.py  rfid_indoor.py  rss_based.py  sensor_fusion.py  sodindoorloc.py  tampere.py  tuji1.py  ujindoorloc.py  ultrasound_indoor.py  uwb_indoor.py  uwb_ranging.py  vlc_indoor.py  wifi_csi_d2d.py  wifi_imu_hybrid.py  wifi_magnetic_hybrid.py  wild_v2.py  wlanrssi.py
indoorloc/datasets/transforms/: __init__.py
indoorloc/engine/: __init__.py
indoorloc/evaluation/: __init__.py  benchmarks.py  metrics.py
indoorloc/evaluation/benchmark_data/: __init__.py  sodindoorloc.py  tampere.py  ujindoorloc.py
indoorloc/fusion/: __init__.py
indoorloc/localizers/: __init__.py  base.py
indoorloc/localizers/deep/: __init__.py
indoorloc/localizers/fingerprint/: __init__.py  knn.py
indoorloc/localizers/pdr/: __init__.py
indoorloc/locations/: __init__.py  coordinate.py  location.py
indoorloc/models/: __init__.py
indoorloc/models/backbones/: __init__.py  base.py  timm_wrapper.py
indoorloc/models/heads/: __init__.py  base.py  classification.py  hybrid.py  regression.py
indoorloc/models/localizers/: __init__.py  deep_localizer.py
indoorloc/signals/: __init__.py  base.py  ble.py  csi.py  hybrid.py  imu.py  magnetometer.py  ultrasound.py  uwb.py  vlc.py  wifi.py
indoorloc/utils/: __init__.py  config.py  data_loaders.py  download.py  explain.py
indoorloc/visualization/: __init__.py
tests/: __init__.py  test_ble_datasets.py  test_config.py  test_evaluation.py  test_final_datasets.py  test_hybrid_datasets.py  test_localizers.py  test_new_datasets.py  test_other_signal_datasets.py  test_signals.py  test_uwb_datasets.py
tools/: download_dataset.py  gen_config.py  test.py  train.py
