[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indoorloc"
version = "0.1.2"
description = "A unified framework for indoor localization"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "IndoorLoc Team"}
]
maintainers = [
    {name = "IndoorLoc Team"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = [
    "indoor localization",
    "WiFi fingerprinting",
    "positioning",
    "deep learning",
    "machine learning",
    "location",
    "RSSI",
]

dependencies = [
    "torch>=1.10.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
datasets = [
    "h5py>=3.0.0",
    "scipy>=1.7.0",
    "requests>=2.25.0",
]
vision = [
    "torchvision>=0.11.0",
    "opencv-python>=4.5.0",
]
full = [
    "torchvision>=0.11.0",
    "opencv-python>=4.5.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "h5py>=3.0.0",
    "requests>=2.25.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[project.scripts]
indoorloc-train = "indoorloc.tools.train:main"
indoorloc-test = "indoorloc.tools.test:main"
indoorloc-benchmark = "indoorloc.tools.benchmark:main"

[project.urls]
Homepage = "https://github.com/indoorloc/indoorloc"
Documentation = "https://indoorloc.readthedocs.io"
Repository = "https://github.com/indoorloc/indoorloc"
Issues = "https://github.com/indoorloc/indoorloc/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["indoorloc*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
indoorloc = [
    "configs/**/*.yaml",
    "configs/**/*.yml",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["indoorloc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=indoorloc --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
